Improved ftp code.

--- a/upload_settings.yml
+++ b/upload_settings.yml
@@ -1,8 +1,10 @@
 development:
   host: ftp.bookcraft.co.uk
+  directory: public_html/upload_testing
 
 production:
   host: ftp.production.co.uk
+  directory: test
 
 ignored_prefixes:
   - 'ignored_dir'
